# tmp_OpenGL

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  main_backup.cpp
include/: axis.h  background.h  commons.h  commons.h.in  context.h  controls.h  object.h  ogl.h  scene.h  shader.h  text.h  utils.h  view.h  window.h
shaders/: flat_shader.vert  shader.frag  shader.functions  shader.vert  smooth.frag  smooth.vert
sources/: axis.cpp  background.cpp  context.cpp  controls.cpp  object.cpp  scene.cpp  shader.cpp  text.cpp  utils.cpp  view.cpp  window.cpp
